--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,5 +36,12 @@
         </div>
         <h1>{{ title }}</h1>
     </div>
+
+    <div id="about">
+        <h1>About</h1>
+        <p>Hello, I'm Fahim! I enjoy messing around with technology and building solutions to problems through CS.</p>
+        <p>I'm a current first-year at NYU studying computer science. You can see my previous experiences and education in detail on my resume.</p>
+        <p>If you'd like to get in touch or have any inquires you can reach out to me at fahimhussain21@gmail.com.</p>
+    </div>
 </body>
 </html>
