add static templating for experiences

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,5 +36,53 @@
         </div>
         <h1>{{ title }}</h1>
     </div>
-</body>
+
+    <div id="experience">
+      <h1>Experience</h1>
+      <div class="experience-scroll-container">
+
+        <div class="experience-card">
+          <div>
+            <div class="experience-header">
+              <h2>
+                <span class="experience-role">SWE</span>
+                for
+                <a href="example.com" target="_blank">
+                  <span>dummy company name</span>
+                </a>
+              </h2>
+              <p>
+                sept 2022 - present
+              </p>
+            </div>
+            <ul>
+              <li>Placeholder</li>
+              <li>Placeholder</li>
+            </ul>
+          </div>
+        </div>
+      
+        <div class="experience-card">
+          <div>
+            <div class="experience-header">
+              <h2 class="experience-role">
+                SWE
+                <span class="experience-for">for</span>
+                <a href="example.com" target="_blank">
+                  <span>dummy company name</span>
+                </a>
+              </h2>
+              <p>
+                sept 2022 - present
+              </p>
+            </div>
+            <ul>
+              <li>Placeholder</li>
+              <li>Placeholder</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
