--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,48 +40,29 @@
     <div id="experience">
       <h1>Experience</h1>
       <div class="experience-scroll-container">
-
+      {% for experience in experiences %}
         <div class="experience-card">
           <div>
             <div class="experience-header">
               <h2>
-                <span class="experience-role">SWE</span>
+                <span class="experience-role">{{ experience.role }}</span>
                 for
-                <a href="example.com" target="_blank">
-                  <span>dummy company name</span>
+                <a href="{{ experience.href }}" target="_blank">
+                  <span>{{ experience.organization }}</span>
                 </a>
               </h2>
               <p>
-                sept 2022 - present
+                {{ experience.timeline }}
               </p>
             </div>
             <ul>
-              <li>Placeholder</li>
-              <li>Placeholder</li>
+              {% for accomplishment in experience.accomplishments %}
+                <li>{{ accomplishment }}</li>
+              {% endfor %}
             </ul>
           </div>
         </div>
-      
-        <div class="experience-card">
-          <div>
-            <div class="experience-header">
-              <h2 class="experience-role">
-                SWE
-                <span class="experience-for">for</span>
-                <a href="example.com" target="_blank">
-                  <span>dummy company name</span>
-                </a>
-              </h2>
-              <p>
-                sept 2022 - present
-              </p>
-            </div>
-            <ul>
-              <li>Placeholder</li>
-              <li>Placeholder</li>
-            </ul>
-          </div>
-        </div>
+        {% endfor %}
       </div>
     </div>
   </body>
