--- a/app/templates/hobbies.html
+++ b/app/templates/hobbies.html
@@ -33,18 +33,12 @@
     <div id="hobbies">
         <h1>Hobbies</h1>
         <div class="hobby-row">
+            {% for hobby in hobbies %}
             <div class="hobby">
-                <img src="./static/img/food.jpg">
-                <h2>Food</h2>
+                <img src="./static/img/{{ hobby.img_path }}">
+                <h2>{{ hobby.name }}</h2>
             </div>
-            <div class="hobby">
-                <img src="./static/img/gym.jpg">
-                <h2>Gym</h2>
-            </div>
-            <div class="hobby">
-                <img src="./static/img/games.jpg">
-                <h2>Video Games</h2>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </body>
