--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -83,7 +83,7 @@
 
     <div id="education">
       <h2>Education</h2>
-      <div>
+      <div class="education-row">
         <p>I am currently pursuing a Bachelors in Computer Science from New York University with an expected graduation of 2028.</p>
         <img src="./static/img/nyu.png">
       </div>
