Add locations visited

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div id="experience">
-      <h1>Experience</h1>
+      <h1 class="heading">Experience</h1>
       <div class="experience-scroll-container">
         {% for experience in experiences %}
         <div class="experience-card">
@@ -82,11 +82,27 @@
     </div>
 
     <div id="education">
-      <h2>Education</h2>
+      <h1 class="heading">Education</h1>
       <div class="education-row">
         <p>I am currently pursuing a Bachelors in Computer Science from New York University with an expected graduation of 2028.</p>
         <img src="./static/img/nyu.png">
       </div>
+    </div>
+
+    <div id="map">
+      <h1 class="heading">Locations Visited</h1>
+      <p>If we're counting a layover as visiting a city:</p>
+      <ul>
+        <li>New York City, US</li>
+        <li>London, UK</li>
+        <li>Paris, France</li>
+        <li>Rome, Italy</li>
+        <li>Venice, Italy</li>
+        <li>Aman, Jordan</li>
+        <li>Riyadh, Saudi Arabia</li>
+        <li>Dubai, UAE</li>
+        <li>Dhaka, Bangladesh</li>
+      </ul>
     </div>
 
   </div>
