--- a/app/templates/hobbies.html
+++ b/app/templates/hobbies.html
@@ -21,12 +21,23 @@
 
 <body>
     <header class="nav-bar">
-        <div class="nav-content">
+        <div class="nav-logo">
             <a href="/">
-                <div class="nav-logo">
-                    <img src="./static/img/logo.svg" />
-                </div>
+                <img src="./static/img/logo.svg" />
             </a>
+        </div>
+        <div class="nav-content">
+            <nav>
+                <a href="/" class="nav-element">
+                    <h2>Home</h2>
+                </a>
+                {% for page in pages %}
+
+                <a href="/{{ page }}" class="nav-element">
+                    <h2>{{ page|title }}</h2>
+                </a>
+                {% endfor %}
+            </nav>
         </div>
     </header>
 
