--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,12 +21,23 @@
 
 <body>
   <header class="nav-bar">
-    <div class="nav-content">
+    <div class="nav-logo">
       <a href="/">
-        <div class="nav-logo">
-          <img src="./static/img/logo.svg" />
-        </div>
+        <img src="./static/img/logo.svg" />
       </a>
+    </div>
+    <div class="nav-content">
+      <nav>
+        <a href="/" class="nav-element">
+          <h2>Home</h2>
+        </a>
+        {% for page in pages %}
+
+        <a href="/{{ page }}" class="nav-element">
+          <h2>{{ page|title }}</h2>
+        </a>
+        {% endfor %}
+      </nav>
     </div>
   </header>
 
@@ -84,7 +95,8 @@
     <div id="education">
       <h2>Education</h2>
       <div class="education-row">
-        <p>I am currently pursuing a Bachelors in Computer Science from New York University with an expected graduation of 2028.</p>
+        <p>I am currently pursuing a Bachelors in Computer Science from New York University with an expected graduation
+          of 2028.</p>
         <img src="./static/img/nyu.png">
       </div>
     </div>
