make styling more consistent

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div id="experience">
-      <h1>Experience</h1>
+      <h1 class="heading">Experience</h1>
       <div class="experience-scroll-container">
         {% for experience in experiences %}
         <div class="experience-card">
@@ -93,7 +93,7 @@
     </div>
 
     <div id="education">
-      <h2>Education</h2>
+      <h1 class="heading">Education</h1>
       <div class="education-row">
         <p>I am currently pursuing a Bachelors in Computer Science from New York University with an expected graduation
           of 2028.</p>
