--- a/app/templates/hobbies.html
+++ b/app/templates/hobbies.html
@@ -41,17 +41,20 @@
         </div>
     </header>
 
-    <div id="hobbies">
-        <h1>Hobbies</h1>
-        <div class="hobby-row">
-            {% for hobby in hobbies %}
-            <div class="hobby">
-                <img src="./static/img/{{ hobby.img_path }}">
-                <h2>{{ hobby.name }}</h2>
+    <div class="content">
+        <div id="hobbies">
+            <h1 class="heading">Hobbies</h1>
+            <div class="hobby-row">
+                {% for hobby in hobbies %}
+                <div class="hobby">
+                    <img src="./static/img/{{ hobby.img_path }}">
+                    <h2>{{ hobby.name }}</h2>
+                </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
     </div>
+
 </body>
 
 </html>
