Fix typo in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -95,7 +95,7 @@
     <div id="education">
       <h1 class="heading">Education</h1>
       <div class="education-row">
-        <p>I am currently pursuing a Bachelors in Computer Science from New York University with an expected graduation
+        <p>I am currently pursuing a Bachelor's in Computer Science from New York University with an expected graduation
           of 2028.</p>
         <img src="./static/img/nyu.png">
       </div>
