--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@
       <h1 class="heading">About</h1>
       <p>Hello, I'm Fahim! I enjoy messing around with technology and building solutions to problems through CS.</p>
       <p>
-        I'm a current first-year at NYU studying computer science. You can see my previous experiences and education
+        I'm an incoming sophomore at NYU studying computer science. You can see my previous experiences and education
         in detail on my resume.
       </p>
       <p>
