add new visited city to portfolio

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -106,6 +106,7 @@
       <p>If we're counting a layover as visiting a city:</p>
       <ul>
         <li>New York City, US</li>
+        <li>Los Angeles, US</li>
         <li>London, UK</li>
         <li>Paris, France</li>
         <li>Rome, Italy</li>
