add styles to timeline container

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -76,7 +76,7 @@
           <button type="submit">Submit</button>
         </form>
 
-        <div>
+        <div class="hobby-row">
           {% for event in timeline %}
           <div class="hobby">
             <h2>{{ event.name }}</h2>
